opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_xml_conv"
bug-reports: "https://github.com/janestreet/ppx_xml_conv/issues"
dev-repo: "https://github.com/janestreet/ppx_xml_conv.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_xml_conv" "--root" "." "-j" jobs]
]
depends: [
  "csvfields"
  "jbuilder"
  "ppx_conv_func"
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "ppx_type_conv"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Generate XML conversion functions from records

Part of the Jane Street's PPX rewriters collection.
"
